# willow-demo

./: .env.example  .gitignore  CLAUDE.md  README.md  package.json  pnpm-lock.yaml  tsconfig.base.json  turbo.json
.claude/commands/: simplify-all.md
crates/willow-core/: Cargo.toml  package.json  vitest.config.ts
crates/willow-core/__tests__/: core.test.ts
crates/willow-core/coverage/: clover.xml  coverage-final.json  index.html  vitest.config.ts.html
crates/willow-core/src/: error.rs  lib.rs  model.rs  napi_convert.rs  napi_dto.rs  napi_exports.rs  search.rs  storage.rs  store.rs
crates/willow-core/src/vcs/: diff.rs  merge.rs  mod.rs  object_store.rs  repository.rs  types.rs
plans/: agent-tool-restrictions.md  expressive-link-relations.md  maintenance-agent.md
scripts/: count-loc.sh
